--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JSON数据格式化</title>
+    <title>Toolkit</title>
   </head>
 
   <body>
